<resources>
    <string name="app_name">CalculadoraEntregable</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonSuma">+</string>
    <string name="buttonResta">-</string>
    <string name="buttonMultiplicacion">x</string>
    <string name="buttonDivision">/</string>
    <string name="buttonIgual">=</string>
    <string name="buttonComa">,</string>
    <string name="buttonDel">DEL</string>
    <string name="buttonSeno">sen</string>
    <string name="buttonCoseno">cos</string>
    <string name="switchRad">RAD</string>


</resources>